+검색조건 초기화 버튼 아이디 적용

--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -35,7 +35,7 @@
                             </dd>
                         </dl>
                         <dl class="searchTextSet">
-                            <dd class="button"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
+                             <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                             <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                         </dl>
                     </div>
