--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -21,7 +21,7 @@
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
-											<input type="checkbox" id="checkAll" name="">
+											<input type="checkbox"  id="checkAll" name="" data-init-value="true">
 											<label for="checkAll"><span></span>전체</label>
 										</span>
                                     </li>
@@ -47,7 +47,7 @@
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
-											<input type="checkbox" id="checkAll" name="">
+											<input type="checkbox"  id="checkAll" name="" data-init-value="true">
 											<label for="checkAll"><span></span>전체</label>
 										</span>
                                     </li>
@@ -75,7 +75,7 @@
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
-											<input type="checkbox" id="checkAll" name="">
+											<input type="checkbox"  id="checkAll" name="" data-init-value="true">
 											<label for="checkAll"><span></span>전체</label>
 										</span>
                                     </li>
