--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -27,7 +27,7 @@
                         </dl>
                         <dl class="searchTextSet">
                             <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
-                            <dd class="button"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
+                             <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                             <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                         </dl>
                     </div>
