--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -121,7 +121,7 @@
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
-											<input type="checkbox" id="checkAll" name="">
+											<input type="checkbox"  id="checkAll" name="" data-init-value="true">
 											<label for="checkAll"><span></span>전체</label>
 										</span>
                                     </li>
@@ -234,7 +234,7 @@
                     </dl>
                     <dl class="searchTextSet">
                         <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
-                        <dd class="button"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
+                         <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
                 </div>
