--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
@@ -211,9 +211,9 @@
                     </dl>
                     <dl class="dateSet">
                         <dt>발생 기간</dt>
-                        <dd><input type="date" class="inputDate"></dd>
+                        <dd><input type="date" class="input_date" id="startDt"></dd>
                         <span>부터</span>
-                        <dd><input type="date" class="inputDate"></dd>
+                        <dd><input type="date" class="input_date" id="endDt"></dd>
                         <span>까지</span>
                     </dl>
                     <dl class="searchTextSet">
