--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -23,6 +23,7 @@
 
         <!-- datetimepicker -->
         <link rel="stylesheet" type="text/css" href="/css/plugin/air-datepicker/air-datepicker.css">
+        <link rel="stylesheet" type="text/css" href="/css/plugin/air-datepicker/datepicker.css">
         <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.js"></script>
         <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.ko.js"></script>
 
