--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -18,11 +18,9 @@
                     <div>
                         <dl class="dateSet">
                             <dt>발생 기간</dt>
-                            <dd><input type="date" class="inputDate"></dd>
-                            <dd><input type="time" class="inputDate"></dd>
+                            <dd><input type="text" class="input_date" id="startDt"></dd>
                             <span>부터</span>
-                            <dd><input type="date" class="inputDate"></dd>
-                            <dd><input type="time" class="inputDate"></dd>
+                            <dd><input type="text" class="input_date" id="endDt"></dd>
                             <span>까지</span>
                         </dl>
                         <dl class="searchTextSet">
