맵 레이어 제어 공통화 _ 측정도구

--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -52,6 +52,7 @@
 
         <script type="text/javascript" src="/js/map/creater/mapCreater.js"></script>Z
         <script type="text/javascript" src="/js/map/creater/layerControlCreater.js"></script>
+        <script type="text/javascript" src="/js/map/creater/measureToolCreater.js"></script>
 
         <script type="text/javascript" src="/js/map/layer_icon.js"></script>
         <script type="text/javascript" src="/js/map/map_layer.js"></script>
