--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -30,9 +30,16 @@
         <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.js"></script>
         <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.ko.js"></script>
 
+        <!-- sweetAlert2-->
+        <link rel="stylesheet" type="text/css" href="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.css">
+        <script type=text/javascript src="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.js"></script>
+
         <!-- common js-->
         <script type="text/javascript" src="/js/common/common.js" ></script>
         <script type="text/javascript" src="/js/common/pageInit.js" ></script>
+
+        <!-- pages js-->
+        <script type="text/javascript" src="/js/pages/notice.js"></script>
     </head>
 </th:block>
 </html>
