소스코드 정리, 공지사항 조회 기능 추가

--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -11,7 +11,7 @@
         <meta name="context-path" th:content="@{/}"/>
 
         <!-- default css files -->
-        <link rel="stylesheet" type="text/css" href="/css/default/layout.css">
+        <link rel="stylesheet" type="text/css" href="/css/layout.css">
 
         <!--js file -->
 
