--- a/danusys-platform/src/main/resources/static/css/default.css
+++ b/danusys-platform/src/main/resources/static/css/default.css
@@ -22,15 +22,15 @@ table{border-collapse: collapse; border-spacing: 0;}
 /* input : checkbox */
 input[type="checkbox"]{display: none;}
 input[type="checkbox"] + label{color: #333; cursor: pointer;}
-input[type="checkbox"] + label span{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; vertical-align: middle; background: url('/images/chkboxBg.png') center center no-repeat; cursor: pointer;}
-input[type="checkbox"]:checked + label span{background: url('/images/chkboxBgChked.png') center center no-repeat;}
+input[type="checkbox"] + label span{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; vertical-align: middle; background: url('/images/default/chkboxBg.png') center center no-repeat; cursor: pointer;}
+input[type="checkbox"]:checked + label span{background: url('/images/default/chkboxBgChked.png') center center no-repeat;}
 
 
 /* input : radio */
 input[type="radio"] {display: none;}
 input[type="radio"] + label {padding: 10px 10px 10px 0px; cursor: pointer;}
-input[type="radio"] + label span.round{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; font-size: 0; vertical-align: middle; background: url('../images/radioBg.png') no-repeat; background-size: 100% 100%; cursor: pointer;}
-input[type="radio"]:checked + label span.round {background: url('../images/radioBgChked.png') no-repeat; background-size: 100% 100%;}
+input[type="radio"] + label span.round{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; font-size: 0; vertical-align: middle; background: url('/images/default/radioBg.png') no-repeat; background-size: 100% 100%; cursor: pointer;}
+input[type="radio"]:checked + label span.round {background: url('/images/default/radioBgChked.png') no-repeat; background-size: 100% 100%;}
 
 
 /* input + select + textarea */
@@ -61,7 +61,7 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 /* lnb */
 .lnb{position: absolute; top: 60px; left: 0px; display: flex; flex-direction: column; width: 320px; height: calc(100% - 60px); transition: all 1s; background: #1a1b1d;}
 .lnbToggle{position: absolute; left: 320px; top: 50%; transform: translateY(-50%); width: 24px; height: 60px; border: none; border-radius: 0; border-top-right-radius: 10px; border-bottom-right-radius: 10px; background: rgba(26,27,29,0.8); text-indent: -9999px; cursor: pointer;}
-.lnbToggle span{display: block; width: 7px; height: 12px; background: url(../images/lnbToggle.png) center center no-repeat;}
+.lnbToggle span{display: block; width: 7px; height: 12px; background: url(/images/default/lnbToggle.png) center center no-repeat;}
 .lnbToggle:hover span{-ms-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
 .lnb.toggle{left: -320px;}
 
@@ -125,7 +125,7 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 
 /* selectboxCheck */
 .selectboxCheck{position: relative; margin: 14px 14px;}
-.selectboxCheck_title{width: 100%; height: 40px; line-height: 38px; padding: 0px 8px; font-size: 14px; letter-spacing: -0.4px; color: #dee0e4; box-sizing: border-box; border: 1px solid #292c34; border-radius: 4px; background: url("../images/bg_selectbox_g.svg") 290px center no-repeat transparent; background-size: 16px; cursor: pointer;}
+.selectboxCheck_title{width: 100%; height: 40px; line-height: 38px; padding: 0px 8px; font-size: 14px; letter-spacing: -0.4px; color: #dee0e4; box-sizing: border-box; border: 1px solid #292c34; border-radius: 4px; background: url("/images/default/bg_selectbox_g.svg") 290px center no-repeat transparent; background-size: 16px; cursor: pointer;}
 .selectCheckList{position: absolute; display: none; overflow: hidden; width: 100%; margin: -1px 0px 0px 0px; padding: 8px 14px; box-sizing: border-box; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; border: 1px solid #292c34; background: black; box-shadow: 0px 6px 10px rgba(0,0,0,0.2);}
 .selectCheckList li{display: flex; align-items: center; justify-content: flex-start; margin: 10px 0px;}
 .selectCheckList li span{flex: 1;}
