--- a/danusys-platform/src/main/resources/static/css/plugin/jqueryColor/jquery.minicolors.css
+++ b/danusys-platform/src/main/resources/static/css/plugin/jqueryColor/jquery.minicolors.css
@@ -3,7 +3,7 @@
 }
 
 .minicolors-sprite {
-  background-image: url(../../images/colorpicker/jquery.minicolors.png);
+  background-image: url(../../../images/colorpicker/jquery.minicolors.png);
 }
 
 .minicolors-swatch {
