--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -24,7 +24,7 @@
         <!-- datatable.js-->
         <link rel="stylesheet" type="text/css" href="/webjars/datatables/1.10.19/css/jquery.dataTables.min.css">
         <script type="text/javascript" src="/webjars/datatables/1.10.19/js/jquery.dataTables.min.js" ></script>
-
+        <script type="text/javascript" src="/js/plugin/dataTable-ellipsis/dataTable-ellipsis.js" ></script>
         <!-- datetimepicker -->
         <link rel="stylesheet" type="text/css" href="/css/plugin/air-datepicker/datepicker.css">
         <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.js"></script>
