관제 UI map base 추가

--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -5,6 +5,7 @@
     <th:block th:fragme`nt="pageLink">
         <link rel="stylesheet" href="/css/map/ol.css" >
         <link rel="stylesheet" href="/css/map/ol-contextmenu.css">
+        <link rel="stylesheet" href="/css/map/map.css" >
         <link rel="stylesheet" href="/css/video/connectDialog.css">
         <link rel="stylesheet" href="/css/video/video.css">
         <link rel="stylesheet" href="/css/log.css">
@@ -42,7 +43,7 @@
         <!-- openlayers lib -->
         <script type="text/javascript" src="/webjars/proj4js/2.2.1/proj4.js"></script>
         <script type="text/javascript" src="/webjars/openlayers/6.9.0/ol.js"></script>
-        <script type="text/javascript" src="/webjars/moment/2.29.1/moment.js"></script>
+        <!--<script type="text/javascript" src="/webjars/moment/2.29.1/moment.js"></script>-->
 
         <!-- kakao api -->
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps-tunneling/sdk.js?appkey=8a0ebda8876bb68f663ceb77b22a5a51&libraries=services,clusterer"></script>
@@ -50,7 +51,7 @@
         <!-- local -->
         <script type="text/javascript" src="/js/import/ol-ext.js"></script>
 
-        <script type="text/javascript" src="/js/map/creater/mapCreater.js"></script>Z
+        <script type="text/javascript" src="/js/map/creater/mapCreater.js"></script>
         <script type="text/javascript" src="/js/map/creater/layerControlCreater.js"></script>
         <script type="text/javascript" src="/js/map/creater/measureToolCreater.js"></script>
 
