--- a/danusys-platform/src/main/resources/static/css/layout.css
+++ b/danusys-platform/src/main/resources/static/css/layout.css
@@ -166,7 +166,7 @@ header .utmenu li i{width: 18px; height: 18px; margin: 0px 8px 0px 0px;}
 
 
 /* map */
-#map{position: relative; flex: 1; background: #ccd5de;}
+#map{/*position: relative;*/ flex: 1; background: #ccd5de;}
 .mapButton{position: absolute; top: 0; right: 0; display: flex; flex-direction: column; align-items: flex-end; margin: 10px;}
 .mapButton ul{overflow: hidden; width: 40px; margin: 0px 0px 10px; border-radius: 4px; background: #1a1b1d;}
 .mapButton ul li{display: flex; align-items: center; justify-content: center; height: 40px; box-sizing: border-box; border-bottom: 1px solid #434751; text-indent: -9999px; cursor: pointer;}
