--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -1,19 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <th:block th:fragment="navLFragment">
 
-        <!-- LNB -->
-        <aside class="lnb">
-            <ul>
-                <li class="active">MENU<br>1</li>
-                <li>MENU<br>2</li>
-                <li>MENU<br>3</li>
-                <li>MENU<br>4</li>
-                <li>MENU<br>5</li>
-            </ul>
-        </aside>
-
         <!-- LNM -->
-        <section class="menuFold">
+        <section class="menuFold smartPower">
             <ul class="tab">
                 <li class="active"><a>실시간</a></li>
                 <li><a>개소</a></li>
