--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -2,7 +2,7 @@
     <th:block th:fragment="navRFragment">
 
         <!-- RNM -->
-        <section class="areaInfo">
+        <section class="areaInfo smartPower">
             <h6>[Tab 1 관리번호] [Tab 1 형태] Tab 1 이름<i><img src="/images/default/close.svg"></i></h6>
             <ul class="tab">
                 <li class="active"><a>기본 정보</a></li>
