--- a/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
@@ -16,8 +16,8 @@
                 <form>
                     <div>
                         <dl class="searchTextSet">
-                            <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
-                             <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
+                            <dd><input type="text" name="keyword" placeholder="검색어를 입력하세요."></dd>
+                            <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                             <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                         </dl>
                     </div>
@@ -28,123 +28,32 @@
                     <div class="articleTitle">
                         <dl class="title">
                             <dt>그룹 코드 목록</dt>
-                            <dd><span class="count">123</span>건</dd>
+                            <dd><span class="count">0</span>건</dd>
                         </dl>
                     </div>
                     <div class="searchTable">
-                        <table>
+                        <table id="parentCodeTable">
                             <thead>
                             <tr>
-                                <th>Index</th>
+                                <th>그룹 번호</th>
+                                <th>그룹 명</th>
                                 <th>그룹 코드</th>
-                                <th>그룹 코드 이름</th>
-                                <th>사용 여부</th>
+                                <th>입력일</th>
                                 <th>상세보기</th>
                             </tr>
                             </thead>
-                            <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status"></span>사용 안함</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status"></span>사용 안함</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            </tbody>
                         </table>
-                    </div>
-                    <div class="tableBottom">
-                        <ul class="pageNav">
-                            <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
-                            <li class="on">1</li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                            <li>5</li>
-                            <li class="next"><i><img src="/images/default/next.svg"></i></li>
-                        </ul>
-                        <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
                     </div>
                 </article>
                 <article class="searchList">
                     <div class="articleTitle">
                         <dl class="title">
                             <dt>{선택한 그룹 코드 이름}에 속한 세부 코드 목록</dt>
-                            <dd><span class="count">123</span>건</dd>
+                            <dd><span class="count">0</span>건</dd>
                         </dl>
                     </div>
                     <div class="searchTable">
-                        <table>
+                        <table id="childCodeTable">
                             <thead>
                             <tr>
                                 <th>Index</th>
@@ -154,91 +63,7 @@
                                 <th>상세보기</th>
                             </tr>
                             </thead>
-                            <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status"></span>사용 안함</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status"></span>사용 안함</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status"></span>사용 안함</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>fclt_tlpg_pole</td>
-                                <td>스마트폴</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            </tbody>
                         </table>
-                    </div>
-                    <div class="tableBottom">
-                        <ul class="pageNav">
-                            <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
-                            <li class="on">1</li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                            <li>5</li>
-                            <li class="next"><i><img src="/images/default/next.svg"></i></li>
-                        </ul>
-                        <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
                     </div>
                 </article>
             </div>
