공통 코드 관리 js 링크

--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -40,6 +40,7 @@
 
         <!-- pages js-->
         <script type="text/javascript" src="/js/pages/notice.js"></script>
+        <script type="text/javascript" src="/js/pages/commonCode.js"></script>
     </head>
 </th:block>
 </html>
