통신로그 메뉴 추가

--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -16,10 +16,13 @@
                 <a href="/pages/inqry/facilities">시설물 관리<span>58</span></a>
             </li>
             <li id="four">
-                <a href="#four">통신 로그 조회</a>
+                <a href="#four">이용자 수 조회</a>
             </li>
             <li id="five">
-                <a href="#five">전력량 조회</a>
+                <a href="#five">통신 로그 조회</a>
+            </li>
+            <li id="six">
+                <a href="#six">전력량 조회</a>
             </li>
         </ul>
     </aside>
