데이터테이블 페이지네이션 UI 수정

--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -64,13 +64,13 @@
                 </div>
                 <!--<div class="tableBottom">
                     <ul class="pageNav">
-                        <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
+                        <li class="prev"><i><img src="/images/default/first.svg"></i></li>
                         <li class="on">1</li>
                         <li>2</li>
                         <li>3</li>
                         <li>4</li>
                         <li>5</li>
-                        <li class="next"><i><img src="/images/default/next.svg"></i></li>
+                        <li class="next"><i><img src="/images/default/last.svg"></i></li>
                     </ul>
                     <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
                 </div>-->
