--- a/danusys-platform/src/main/resources/static/css/layout.css
+++ b/danusys-platform/src/main/resources/static/css/layout.css
@@ -374,18 +374,49 @@ header .utmenu li i{width: 18px; height: 18px; margin: 0px 8px 0px 0px;}
 .searchTable table tbody tr td span.type i{margin: 5px 0px; opacity: 0.8; cursor: default;}
 .searchTable table tbody tr td span.type.bus i{width: 16px; height: 16px; margin: 7px 0px;}
 .searchTable table tbody tr td .charts{width: 100%; height: 38px; margin: auto; line-height: 34px; color: darkslateblue; background: darkseagreen;} /* 차트 영역 임의 표시 */
-.searchTable .tableBottom{display: flex; align-items: center; justify-content: center; height: 40px; margin: 14px 0px 0px;}
-.searchTable .tableBottom .pageNav{flex: 1;  display: flex; align-items: center; justify-content: center; grid-gap: 10px;}
-.searchTable .tableBottom .pageNav li{width: 34px; height: 34px; line-height: 32px; text-align: center; font-size: 14px; color: #7f8491; border-radius: 100%; background: #292c34; cursor: pointer;}
-.searchTable .tableBottom .pageNav li:hover{color: #dee0e4;}
-.searchTable .tableBottom .pageNav li.on{color: #dee0e4; font-weight: bold; background: #3a66e5;}
-.searchTable .tableBottom .pageNav li:active{color: #dee0e4; font-weight: bold; background: #3a66e5;}
-.searchTable .tableBottom .pageNav li.prev,
-.searchTable .tableBottom .pageNav li.next{background: none;}
-.searchTable .tableBottom .pageNav li.prev i,
-.searchTable .tableBottom .pageNav li.next i{max-width: 20px; max-height: 20px; margin: 0px auto;}
-.searchTable .tableBottom .pageNav li.prev:hover,
-.searchTable .tableBottom .pageNav li.next:hover{filter: brightness(1.75);}
+.searchTable .tableBottom{display: flex; align-items: center; justify-content: center; height: 40px; margin: 10px 0px 10px 0px;}
+
+/* paginate */
+.dataTables_wrapper .dataTables_paginate{float:none; width:calc(100% - 480px); display:flex; align-items:center; justify-content:center; margin:0px auto; padding:0px; text-align:center; background:none;}
+
+/* paginate button default */
+.dataTables_wrapper .dataTables_paginate .paginate_button{box-sizing:border-box; display:inline-flex; align-items:center; justify-content:center; width:20px; min-width:20px; height:20px; margin:0px 4px; padding:18px; text-align:center; color:#6d8281 !important; border:1px solid #333f3e; border-radius:50%; background:#333f3e; text-decoration:none !important; cursor:pointer;}
+.dataTables_wrapper .dataTables_paginate .ellipsis{color:#dee0e4;}
+
+/* paginate button hover */
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover{color:#dee0e4 !important; border:1px solid #445957; background:#445957;}
+
+/* paginate button active */
+.dataTables_wrapper .dataTables_paginate .paginate_button:active{color:#dee0e4 !important; border:1px solid #3dbcb1; background:#3a66e5; box-shadow:none;}
+
+/* paginate button current */
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{color:#dee0e4 !important; background:#3a66e5; border: none;}
+
+/* paginate button arrow */
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled,
+.dataTables_wrapper .dataTables_paginate .paginate_button.first,
+.dataTables_wrapper .dataTables_paginate .paginate_button.previous,
+.dataTables_wrapper .dataTables_paginate .paginate_button.next,
+.dataTables_wrapper .dataTables_paginate .paginate_button.last{margin:0px 2px; border:none; background:none;}
+
+/* paginate button arrow hover */
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover,
+.dataTables_wrapper .dataTables_paginate .paginate_button.first:hover,
+.dataTables_wrapper .dataTables_paginate .paginate_button.previous:hover,
+.dataTables_wrapper .dataTables_paginate .paginate_button.next:hover,
+.dataTables_wrapper .dataTables_paginate .paginate_button.last:hover{border:none; background:none; filter:brightness(150%); cursor:pointer;}
+
+/* paginate button arrow active */
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active,
+.dataTables_wrapper .dataTables_paginate .paginate_button.first:active,
+.dataTables_wrapper .dataTables_paginate .paginate_button.previous:active,
+.dataTables_wrapper .dataTables_paginate .paginate_button.next:active,
+.dataTables_wrapper .dataTables_paginate .paginate_button.last:active{border:none; background:none; filter:brightness(300%); cursor:pointer;}
+
+/* paginate button arrow img */
+.dataTables_wrapper .dataTables_paginate .paginate_button span{}
+.dataTables_wrapper .dataTables_paginate .paginate_button span img{display:block; vertical-align:middle; width:25px; height:25px; margin:0px auto;}
 
 
 .searchTable .tableBottom .button{position: absolute; right: 0; height: 34px; line-height: 32px; padding: 0px 14px; color: #7f8491;}
