--- a/danusys-platform/src/main/resources/templates/view/paging.html
+++ b/danusys-platform/src/main/resources/templates/view/paging.html
@@ -106,6 +106,8 @@
     $('#example').DataTable({
         "processing": true,
         "serverSide": true,
+        "order": [],
+        "lengthMenu": [10, 50, 100, 500, 1000],
         "ajax": {
             "url": "/notice/paging",
             "type": "POST",
@@ -116,11 +118,11 @@
             }
         },
         "columns": [
-            {"data": "name", "width": "20%"},
-            {"data": "position","width": "20%"},
-            {"data": "office", "width": "20%"},
-            {"data": "start_date", "width": "20%"},
-            {"data": "salary", "width": "20%"}
+            {"data": "name", "type": "STRING", "width": "20%"},
+            {"data": "position", "type": "STRING", "width": "20%"},
+            {"data": "office", "type": "STRING", "width": "20%"},
+            {"data": "start_date", "type": "STRING", "width": "20%"},
+            {"data": "salary", "type": "DOUBLE", "width": "20%"}
         ]
     });
 
