이벤트관리 조희 로직 추가

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
@@ -242,10 +242,10 @@
                 </div>
             </div>
             <div class="searchTable">
-                <table>
+                <table id="cityEventTable">
                     <thead>
                     <tr>
-                        <th>Index</th>
+                        <!--<th>Index</th>-->
                         <th>이벤트 ID</th>
                         <th>이벤트 종류</th>
                         <th>이벤트 등급</th>
@@ -259,7 +259,7 @@
                         <th>상세보기</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <!--<tbody>
                     <tr>
                         <td>1</td>
                         <td>CEB000001</td>
@@ -274,52 +274,10 @@
                         <td>2021.11.25 15:49</td>
                         <td><span class="button">상세보기</span></td>
                     </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>CEB000001</td>
-                        <td>금연벨</td>
-                        <td>주의</td>
-                        <td><span class="status yellow"></span></td>
-                        <td>BG001</td>
-                        <td>광명시청</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td>2021.11.25 15:49</td>
-                        <td>2021.11.25 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>CEB000001</td>
-                        <td>금연벨</td>
-                        <td>주의</td>
-                        <td><span class="status green"></span></td>
-                        <td>BG001</td>
-                        <td>광명시청</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td>2021.11.25 15:49</td>
-                        <td>2021.11.25 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    </tbody>
+                    </tbody>-->
                 </table>
-            </div>
-            <div class="tableBottom">
-                <ul class="pageNav">
-                    <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
-                    <li class="on">1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li class="next"><i><img src="/images/default/next.svg"></i></li>
-                </ul>
-                <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
             </div>
         </article>
     </section>
-
 </th:block>
-
 </html>
