--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
@@ -209,10 +209,10 @@
                 </div>
             </div>
             <div class="searchTable">
-                <table>
+                <table id="troubleEventTable">
                     <thead>
                     <tr>
-                        <th>Index</th>
+                        <!--<th>Index</th>-->
                         <th>이벤트 관리 ID</th>
                         <th>이벤트 종류</th>
                         <th>처리 상태</th>
@@ -227,7 +227,7 @@
                         <th>상세보기</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <!--<tbody>
                     <tr>
                         <td>1</td>
                         <td>FEB000001</td>
@@ -243,54 +243,10 @@
                         <td>2021.11.25 15:49</td>
                         <td><span class="button">상세보기</span></td>
                     </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>FEB000001</td>
-                        <td>GW 이상</td>
-                        <td><span class="status yellow"></span></td>
-                        <td>BF001</td>
-                        <td>AED</td>
-                        <td><span class="type pole"><i><img src="/images/default/icon_pole.svg"></i></span></td>
-                        <td>광명 시청</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td>2021.11.25 15:49</td>
-                        <td>2021.11.25 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>FEB000001</td>
-                        <td>GW 이상</td>
-                        <td><span class="status green"></span></td>
-                        <td>BF001</td>
-                        <td>AED</td>
-                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
-                        <td>광명 시청</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td>2021.11.25 15:49</td>
-                        <td>2021.11.25 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    </tbody>
+                    </tbody>-->
                 </table>
-            </div>
-            <div class="tableBottom">
-                <ul class="pageNav">
-                    <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
-                    <li class="on">1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li class="next"><i><img src="/images/default/next.svg"></i></li>
-                </ul>
-                <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
             </div>
         </article>
     </section>
-
 </th:block>
-
 </html>
