--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -41,6 +41,7 @@
         <!-- pages js-->
         <script type="text/javascript" src="/js/pages/notice.js"></script>
         <script type="text/javascript" src="/js/pages/commonCode.js"></script>
+        <script type="text/javascript" src="/js/pages/event.js"></script>
     </head>
 </th:block>
 </html>
