image path change

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -3,9 +3,9 @@
 
 <th:block layout:fragment="content">
     <h4>
-        <i><img src="images/inquiryTitle.svg"></i>
+        <i><img src="/images/default/inquiryTitle.svg"></i>
         <span>조회/관리</span>
-        <i><img src="images/settingArrowNext.svg"></i>
+        <i><img src="/images/default/settingArrowNext.svg"></i>
         <span>개소 관리</span>
     </h4>
     <section class="inquiryContent">
@@ -188,8 +188,8 @@
                     </dl>
                     <dl class="searchTextSet">
                         <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
-                        <dd class="button"><i><img src="images/return.svg"></i>검색조건 초기화</dd>
-                        <dd class="button"><i><img src="images/search.svg"></i>검색</dd>
+                        <dd class="button"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
+                        <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
                 </div>
             </form>
@@ -207,7 +207,7 @@
                         <li><span class="green"></span>정상 : 14</li>
                     </ul>
                     <ul>
-                        <li><i><img src="images/add.svg"></i>추가</li>
+                        <li><i><img src="/images/default/add.svg"></i>추가</li>
                     </ul>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                     <tr>
                         <td>1</td>
                         <td>BG001</td>
-                        <td><span class="type bus"><i><img src="images/icon_bus.svg"></i></span></td>
+                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
                         <td>광명 시청</td>
                         <td><span class="status red"></span></td>
                         <td>AED, 비상벨, 스마트 공기청정지, 냉난방기 외 00개</td>
@@ -241,7 +241,7 @@
                     <tr>
                         <td>2</td>
                         <td>BG001</td>
-                        <td><span class="type pole"><i><img src="images/icon_pole.svg"></i></span></td>
+                        <td><span class="type pole"><i><img src="/images/default/icon_pole.svg"></i></span></td>
                         <td>광명 시청</td>
                         <td><span class="status green"></span></td>
                         <td>AED, 비상벨, 스마트 공기청정지, 냉난방기 외 00개</td>
@@ -252,7 +252,7 @@
                     <tr>
                         <td>2</td>
                         <td>BG001</td>
-                        <td><span class="type bus"><i><img src="images/icon_bus.svg"></i></span></td>
+                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
                         <td>광명 시청</td>
                         <td><span class="status gray"></span></td>
                         <td>AED, 비상벨, 스마트 공기청정지, 냉난방기 외 00개</td>
@@ -263,20 +263,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="tableBottom">
-                <ul class="pageNav">
-                    <li class="prev"><i><img src="images/prev.svg"></i></li>
-                    <li class="on">1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li class="next"><i><img src="images/next.svg"></i></li>
-                </ul>
-                <p class="button"><i><img src="images/excel.svg"></i>엑셀로 내보내기</p>
-            </div>
         </article>
     </section>
 </th:block>
-
 </html>
