퍼블리싱 중 html 변경

--- a/danusys-platform/src/main/resources/templates/fragments/config/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/config/nav.html
@@ -3,10 +3,10 @@
     <aside class="accordionMenu accordion">
         <ul class="accordion">
             <li id="one" class="multi">
-                <a href="#one">관제</a>
+                <a href="#one">스마트 가로등</a>
                 <ul class="sub-menu">
-                    <li id="district"><a href="/pages/config/district">구역 설정</a></li>
-                    <li id="dimming"><a href="/pages/config/dimming">디밍 설정</a></li>
+                    <li id="dimmingGroup"><a href="/pages/config/dimmingGroup">디밍 그룹 설정</a></li>
+                    <li id="dimmingSet"><a href="/pages/config/dimmingSet">디밍 설정</a></li>
                 </ul>
             </li>
             <li id="two" class="multi">
