--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -7,7 +7,7 @@
             <li id="mntr"><a href="/pages/mntr">관제</a></li>
             <li id="inqry"><a href="/pages/inqry/event1">조회/관리</a></li>
             <li id="stats"><a href="/pages/stats">통계</a></li>
-            <li id="config"><a href="/pages/config/district">환경설정</a></li>
+            <li id="config"><a href="/pages/config/dimmingGroup">환경설정</a></li>
         </ul>
         <ul class="utmenu">
             <li><i><img src="/images/default/utmenu01.svg"></i>알림</li>
