--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -47,9 +47,12 @@
                         <dt>사용자 계정 목록</dt>
                         <dd><span class="count">123</span>건</dd>
                     </dl>
+                    <ul>
+                        <li><i><img src="/images/default/add.svg"></i>사용자 계정 추가</li>
+                    </ul>
                 </div>
                 <div class="searchTable">
-                    <table>
+                    <table id="userAccountTable">
                         <thead>
                         <tr>
                             <th>Index</th>
@@ -73,72 +76,6 @@
                             <td>danusys@danusys.com</td>
                             <td>2021.11.25 15:49</td>
                             <td><span class="status green"></span>정상</td>
-                            <td><span class="button">상세보기</span></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>userID0001</td>
-                            <td>김다누</td>
-                            <td>관제 1팀 외 00개</td>
-                            <td>010-0000-0000</td>
-                            <td>danusys@danusys.com</td>
-                            <td>2021.11.25 15:49</td>
-                            <td><span class="status"></span>사용 안함</td>
-                            <td><span class="button">상세보기</span></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>userID0001</td>
-                            <td>김다누</td>
-                            <td>관제 1팀 외 00개</td>
-                            <td>010-0000-0000</td>
-                            <td>danusys@danusys.com</td>
-                            <td>2021.11.25 15:49</td>
-                            <td><span class="status"></span>사용 안함</td>
-                            <td><span class="button">상세보기</span></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>userID0001</td>
-                            <td>김다누</td>
-                            <td>관제 1팀 외 00개</td>
-                            <td>010-0000-0000</td>
-                            <td>danusys@danusys.com</td>
-                            <td>2021.11.25 15:49</td>
-                            <td><span class="status"></span>사용 안함</td>
-                            <td><span class="button">상세보기</span></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>userID0001</td>
-                            <td>김다누</td>
-                            <td>관제 1팀 외 00개</td>
-                            <td>010-0000-0000</td>
-                            <td>danusys@danusys.com</td>
-                            <td>2021.11.25 15:49</td>
-                            <td><span class="status green"></span>정상</td>
-                            <td><span class="button">상세보기</span></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>userID0001</td>
-                            <td>김다누</td>
-                            <td>관제 1팀 외 00개</td>
-                            <td>010-0000-0000</td>
-                            <td>danusys@danusys.com</td>
-                            <td>2021.11.25 15:49</td>
-                            <td><span class="status green"></span>정상</td>
-                            <td><span class="button">상세보기</span></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>userID0001</td>
-                            <td>김다누</td>
-                            <td>관제 1팀 외 00개</td>
-                            <td>010-0000-0000</td>
-                            <td>danusys@danusys.com</td>
-                            <td>2021.11.25 15:49</td>
-                            <td><span class="status"></span>사용 안함</td>
                             <td><span class="button">상세보기</span></td>
                         </tr>
                         </tbody>
