--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -32,6 +32,9 @@
                     <dt>사용자 그룹 목록</dt>
                     <dd><span class="count">123</span>건</dd>
                 </dl>
+                <ul>
+                    <li><i><img src="/images/default/add.svg"></i>사용자 그룹 추가</li>
+                </ul>
             </div>
             <div class="searchTable">
                 <table>
