--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingGroup.html
@@ -8,120 +8,15 @@
         <i><img src="/images/default/settingTitle.svg"></i>
         <span>환경설정</span>
         <i><img src="/images/default/settingArrowNext.svg"></i>
-        <span>관제</span>
+        <span>스마트 가로등</span>
         <i><img src="/images/default/settingArrowNext.svg"></i>
-        <span>구역 설정</span>
+        <span>디밍 그룹 설정</span>
     </h4>
     <section class="settingContent">
         <article class="search-form" id="searchForm">
-            <h6>구역 검색</h6>
+            <h6>디밍 그룹 검색</h6>
             <form>
                 <div>
-                    <dl class="selectboxSet">
-                        <dt>행정구역</dt>
-                        <dd class="dropdown_checkbox">
-                            <div class="box">
-                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district list">
-                                    <li>
-									<span>
-										<input type="checkbox"  id="checkAll" name="" data-init-value="true">
-										<label for="checkAll"><span></span>전체</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind01" name="">
-										<label for="districtFind01"><span></span>광명1동</label>
-									</span>
-                                        <span>
-										<input type="checkbox" id="districtFind02" name="">
-										<label for="districtFind02"><span></span>광명2동</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind03" name="">
-										<label for="districtFind03"><span></span>광명3동</label>
-									</span>
-                                        <span>
-										<input type="checkbox" id="districtFind04" name="">
-										<label for="districtFind04"><span></span>광명4동</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind05" name="">
-										<label for="districtFind05"><span></span>광명5동</label>
-									</span>
-                                        <span>
-										<input type="checkbox" id="districtFind06" name="">
-										<label for="districtFind06"><span></span>광명6동</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind07" name="">
-										<label for="districtFind07"><span></span>광명7동</label>
-									</span>
-                                        <span>
-										<input type="checkbox" id="districtFind08" name="">
-										<label for="districtFind08"><span></span>소하1동</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind09" name="">
-										<label for="districtFind09"><span></span>소하2동</label>
-									</span>
-                                        <span>
-										<input type="checkbox" id="districtFind10" name="">
-										<label for="districtFind10"><span></span>철산1동</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind11" name="">
-										<label for="districtFind11"><span></span>철산2동</label>
-									</span>
-                                        <span>
-										<input type="checkbox" id="districtFind12" name="">
-										<label for="districtFind12"><span></span>철산3동</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind13" name="">
-										<label for="districtFind13"><span></span>철산4동</label>
-									</span>
-                                        <span>
-										<input type="checkbox" id="districtFind14" name="">
-										<label for="districtFind14"><span></span>하안1동</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind15" name="">
-										<label for="districtFind15"><span></span>하안2동</label>
-									</span>
-                                        <span>
-										<input type="checkbox" id="districtFind16" name="">
-										<label for="districtFind16"><span></span>하안3동</label>
-									</span>
-                                    </li>
-                                    <li>
-									<span>
-										<input type="checkbox" id="districtFind17" name="">
-										<label for="districtFind17"><span></span>하안4동</label>
-									</span><span>
-										<input type="checkbox" id="districtFind18" name="">
-										<label for="districtFind18"><span></span>학온동</label>
-									</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </dd>
-                    </dl>
                     <dl class="searchTextSet">
                         <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
                         <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
@@ -133,9 +28,12 @@
         <article class="searchList">
             <div class="articleTitle">
                 <dl class="title">
-                    <dt>구역 목록</dt>
+                    <dt>디밍 그룹 목록</dt>
                     <dd><span class="count">123</span>건</dd>
                 </dl>
+                <ul>
+                    <li><i><img src="/images/default/add.svg"></i>디밍 그룹 생성</li>
+                </ul>
             </div>
             <div class="searchTable">
                 <table>
