--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -37,6 +37,9 @@
                         <dt>공지사항 목록</dt>
                         <dd><span class="count">0</span>건</dd>
                     </dl>
+                    <ul>
+                        <li><i><img src="/images/default/add.svg"></i>작성하기</li>
+                    </ul>
                 </div>
                 <div class="searchTable">
                     <table id="noticeTable">
