--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -17,7 +17,7 @@
                         <dt>개소 종류</dt>
                         <dd class="dropdown_checkbox">
                             <div class="box">
-                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <p class="checkbox_title checkbox_title_district select">개소 종류 선택/p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
@@ -63,6 +63,19 @@
                                     </li>
                                 </ul>
                             </div>
+                        </dd>
+                    </dl>
+                    <dl class="checkboxSet">
+                        <dt>처리 상태</dt>
+                        <dd>
+							<span>
+								<input type="checkbox" id="normal" name="">
+								<label for="normal"><span></span>정상</label>
+							</span>
+                            <span>
+								<input type="checkbox" id="strange" name="">
+								<label for="strange"><span></span>이상</label>
+							</span>
                         </dd>
                     </dl>
                 </div>
@@ -171,19 +184,6 @@
                                     </li>
                                 </ul>
                             </div>
-                        </dd>
-                    </dl>
-                    <dl class="checkboxSet">
-                        <dt>처리 상태</dt>
-                        <dd>
-							<span>
-								<input type="checkbox" id="normal" name="">
-								<label for="normal"><span></span>정상</label>
-							</span>
-                            <span>
-								<input type="checkbox" id="strange" name="">
-								<label for="strange"><span></span>이상</label>
-							</span>
                         </dd>
                     </dl>
                     <dl class="searchTextSet">
