--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
@@ -19,7 +19,7 @@
                         <dt>이벤트 종류</dt>
                         <dd class="dropdown_checkbox">
                             <div class="box">
-                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <p class="checkbox_title checkbox_title_district select">이벤트 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
