퍼블리싱 html 수정

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -17,7 +17,7 @@
                         <dt>개소 종류</dt>
                         <dd class="dropdown_checkbox">
                             <div class="box">
-                                <p class="checkbox_title checkbox_title_district select">개소 종류 선택/p>
+                                <p class="checkbox_title checkbox_title_district select">개소 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
